# 3m-asr-inference

./: .gitignore  README.md  builder.py  builder.sh  enable_trt7.sh  enable_trt8.sh  infer.py  infer.py_bk  infer.sh  infer_score_enc.py  requirements.txt  run_moe.sh  trtexec
TRTAPI++/: .gitignore  CMakeLists.txt  README.md  clang-format.sh  release.sh
TRTAPI++/cmake/modules/: utils.cmake
TRTAPI++/plugin/: CMakeLists.txt  exports.map  trt_plugin_plus.cpp  trt_plugin_plus.h
TRTAPI++/plugin/att_masked_softmax_plugin/: att_masked_softmax_kernel.cu  att_masked_softmax_kernel.h  att_masked_softmax_plugin.cpp  att_masked_softmax_plugin.h
TRTAPI++/plugin/att_stream_softmax_plugin/: att_stream_softmax_kernel.cu  att_stream_softmax_kernel.h  att_stream_softmax_plugin.cpp  att_stream_softmax_plugin.h
TRTAPI++/plugin/cat_split_cache_plugin/: cat_split_cache_kernel.cu  cat_split_cache_kernel.h  cat_split_cache_plugin.cpp  cat_split_cache_plugin.h
TRTAPI++/plugin/celu_plugin/: celu_plugin.cpp  celu_plugin.h
TRTAPI++/plugin/common/: CMakeLists.txt  check_macros_plugin.cpp  check_macros_plugin.h  common.cuh  common.h  cublas_common.cu  cublas_common.h  cuda_stream_manager.cpp  cuda_stream_manager.h  debug.cpp  debug.h  def.h  logger.cpp  logger.h  logging.h  plugin.h  serialize.hpp  trt_logger.cpp  trt_logger.h
TRTAPI++/plugin/dump_tensor_plugin/: dump_tensor_kernel.cpp  dump_tensor_plugin.cpp  dump_tensor_plugin.h
TRTAPI++/plugin/fmoe_expert_plugin/: CMakeLists.txt  fmoe_expert_kernel.cu  fmoe_expert_kernel.h  fmoe_expert_plugin.cpp  fmoe_expert_plugin.h
TRTAPI++/plugin/glu_plugin/: glu_kernel.cu  glu_kernel.h  glu_plugin.cpp  glu_plugin.h
TRTAPI++/plugin/incomplete_plugin/batch_norm_plugin/: batch_norm_plugin.cpp  batch_norm_plugin.h
TRTAPI++/plugin/incomplete_plugin/cmvn_plugin/: cmvn_plugin.cu  cmvn_plugin.h
TRTAPI++/plugin/incomplete_plugin/group_norm_plugin/: group_norm_plugin.cpp  group_norm_plugin.h
TRTAPI++/plugin/incomplete_plugin/prior_prob_plugin/: prior_prob_kernel.cu  prior_prob_plugin.cu  prior_prob_plugin.h
TRTAPI++/plugin/incomplete_plugin/rel_pos_qkv_to_context_plugin/: rel_pos_qkv_to_context_plugin.cpp  rel_pos_qkv_to_context_plugin.cu  rel_pos_qkv_to_context_plugin.h
TRTAPI++/plugin/incomplete_plugin/rel_pos_qkv_to_context_stream_plugin/: rel_pos_qkv_to_context_stream_plugin.cpp  rel_pos_qkv_to_context_stream_plugin.cu  rel_pos_qkv_to_context_stream_plugin.h
TRTAPI++/plugin/incomplete_plugin/reshapePlugin/: reshapePlugin.cpp  reshapePlugin.h
TRTAPI++/plugin/incomplete_plugin/silu_plugin/: silu_kernel.cu  silu_kernel.h  silu_plugin.cpp  silu_plugin.h
TRTAPI++/plugin/layer_norm_plugin/: layer_norm_kernel.cu  layer_norm_kernel.h  layer_norm_plugin.cpp  layer_norm_plugin.h
TRTAPI++/plugin/left_padding_cache_plugin/: left_padding_cache_plugin.cpp  left_padding_cache_plugin.cu  left_padding_cache_plugin.h
TRTAPI++/plugin/mask_conv2d_sample_plugin/: CMakeLists.txt  mask_conv2d_sample_kernel.cu  mask_conv2d_sample_kernel.h  mask_conv2d_sample_plugin.cpp  mask_conv2d_sample_plugin.h
TRTAPI++/plugin/masked_fill_plugin/: masked_fill_kernel.cu  masked_fill_kernel.h  masked_fill_plugin.cpp  masked_fill_plugin.h
TRTAPI++/plugin/rel_positional_encoding_plugin/: rel_positional_encoding_kernel.cu  rel_positional_encoding_kernel.h  rel_positional_encoding_plugin.cpp  rel_positional_encoding_plugin.h
TRTAPI++/plugin/softmax_topk_plugin/: CMakeLists.txt  softmax_topk_kernel.cu  softmax_topk_kernel.h  softmax_topk_plugin.cpp  softmax_topk_plugin.h
TRTAPI++/python/: CMakeLists.txt  generate_code.py  run_test.sh  run_test1.sh
TRTAPI++/python/trt_helper/: __init__.py  base_network_helper.py  builder_helper.py  infer_helper.py  network_helper.py  tensor_network_helper.py  tensor_network_helper_wg.py  torch_network_helper.py  trt_network_helper.py  version.py
data/: generate_trtexec_inputs.py
trainer_3m_fix/bk/: train_cectc_bmuf.py  train_cectc_ddp.py  train_conformer_aed_fmoe_localComm_bmuf.py  train_conformer_aed_fmoe_localComm_bmuf_domain_acc.py  train_conformer_aed_fmoe_localComm_bmuf_domain_acc_hier.py  train_ctc_aed_ddp.py  train_dfsmn_fmoe_localComm_bmuf.py  train_dfsmn_fmoe_localComm_bmuf_domain_acc.py  train_latticeMS_smbr_aed_ddp.py  train_latticeMS_smbr_ddp.py  train_lattice_smbr_aed_bmuf.py  train_lattice_smbr_aed_ddp.py  train_lattice_smbr_bmuf.py  train_lattice_smbr_ddp.py
trainer_3m_fix/fmoe/: __init__.py  balance.py  distributed.py  functions.py  gates.py  layers.py  transformer.py  utils.py
trainer_3m_fix/layer/: att_decoder.py  attention.py  convolution.py  fmoeExMarc_transformer.py  fmoe_transformer.py  positional_encoding.py  positionwise_feed_forward.py  subsampling.py  transformer.py
trainer_3m_fix/loader/: augment.py  cectc_lattice_loader.py  cectc_py_loader.py  ctc_aed_lattice_loader.py  ctc_aed_loader.py  ctc_aed_loader_domain_acc.py  ctc_aed_loader_smbr.py  utils.py
trainer_3m_fix/loss/: balance_loss.py  loss_compute.py
trainer_3m_fix/model/: conformer.py  conformer2.py  conformer_aed.py  conformer_aed2.py  conformer_aed_fmoeExMarc_localComm_catEmbed.py  conformer_aed_fmoe_localComm_catEmbed.py  conformer_aed_fmoe_localComm_catEmbed_domain_acc.py  conformer_aed_fmoe_localComm_catEmbed_domain_acc_hier.py  conformer_embed.py  conformer_embed_domain_acc.py  conformer_fmoeExMarc_localComm_catEmbed.py  conformer_fmoe_localComm_catEmbed.py  conformer_fmoe_localComm_catEmbed_domain_acc.py  conformer_fmoe_localComm_catEmbed_domain_acc_hier.py  ctc_aed.py  dfsmn_base_fmoe_localComm_catEmbed.py  dfsmn_base_res.py  dfsmn_san_fmoe_localComm_catEmbed.py  dfsmn_san_res.py  dfsmn_san_res_embed.py  dfsmn_san_res_embed_domain_acc.py  encoder.py
trainer_3m_fix/utils/: bmuf.py  common.py  fmoe_localComm_bmuf.py  lr_scheduler.py
